--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "description": "i wanna study postcss",
   "main": "index.js",
-  "dependencies": {
-    "http-server": "^0.10.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.2",
-    "http-server": "^0.10.0",
-    "postcss-cli": "^4.1.0",
+    "css-loader": "^0.28.4",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
+    "style-loader": "^0.18.2",
     "sugarss": "^1.0.0",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
-    "start": "http-server -o --cors",
+    "start": "webpack-dev-server",
     "postcss:style01": "postcss ./src/style01.css -o ./dist/output_style01.css -u autoprefixer",
-    "postcss:style02": "postcss ./src/style02.sss -o ./dist/output_style02.css -u autoprefixer -p sugarss"
+    "postcss:style02": "postcss ./src/style02.sss -o ./dist/output_style02.css -u autoprefixer -p sugarss",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
