--- a/package.json
+++ b/package.json
@@ -7,22 +7,19 @@
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "css-loader": "^0.28.4",
-    "gulp": "^3.9.1",
-    "gulp-postcss": "^7.0.0",
-    "gulp-sourcemaps": "^2.6.0",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.0.6",
+    "postcss-scss": "^1.0.3",
     "precss": "^2.0.0",
     "style-loader": "^0.18.2",
-    "sugarss": "^1.0.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "postcss:style01": "postcss ./src/style01.css -o ./dist/output_style01.css -u autoprefixer",
-    "postcss:style02": "postcss ./src/style02.sss -o ./dist/output_style02.css -u autoprefixer -p sugarss",
-    "build": "webpack",
-    "gulp": "gulp css"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
