--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.0.6",
+    "postcss-neat": "^2.5.3",
     "postcss-scss": "^1.0.3",
     "precss": "^2.0.0",
     "style-loader": "^0.18.2",
