--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.2",
-    "css-loader": "^0.28.4",
-    "gulp": "^3.9.1",
+    "css-loader": "^2.1.1",
+    "gulp": "^4.0.2",
     "gulp-postcss": "^7.0.0",
     "gulp-sourcemaps": "^2.6.0",
+    "postcss-cli": "^6.1.2",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "style-loader": "^0.18.2",
